--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "http-server": "^14.1.1"
   },
   "scripts": {
-    "dev": "http-server public -c-1 -p 5173"
+    "dev": "http-server ./ -c-1 -p 5173"
   },
   "dependencies": {
     "@types/p5": "^1.7.6",
